--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,118 +1,101 @@
-
 <% content_for :javascript do %>
-  <script type="text/javascript">
+<script type="text/javascript">
     ShopifyApp.ready(function(){
       ShopifyApp.Bar.initialize({ title: "Banners List" });
     });
-  </script>
-<% end %>
+  </script><% end %>
 <div style="--top-bar-background:#00848e; --top-bar-color:#f9fafb; --top-bar-background-lighter:#1d9ba4;">
-  <div class="Polaris-Page">
-  <%= link_to 'Add Banner', new_banner_path, class: 'Polaris-Button Polaris-Button--primary' %>
-  <%
-=begin%>
- <button type="button" class="Polaris-Button Polaris-Button--primary" href="/shop/banner" ><span class="Polaris-Button__Content"><span class="Polaris-Button__Text">Add Banner</span></span></button> 
-<%
-=end%>
-    <div class="Polaris-Page-Header">
-      <div class="Polaris-Page-Header__TitleAndRollup">
-        <div class="Polaris-Page-Header__Title">
-          <div>
-            <h1 class="Polaris-DisplayText Polaris-DisplayText--sizeLarge">Previously used Banner</h1>
-          </div>
-          <div></div>
-        </div>
-      </div>
-    </div>
-    <div class="Polaris-Page__Content">
-      <div class="Polaris-Card">
-        <div class="">
-          <div class="Polaris-DataTable__Navigation"><button type="button" class="Polaris-Button Polaris-Button--disabled Polaris-Button--plain Polaris-Button--iconOnly" disabled="" aria-label="Scroll table left one column"><span class="Polaris-Button__Content"><span class="Polaris-Button__Icon"><span class="Polaris-Icon"><svg class="Polaris-Icon__Svg" viewBox="0 0 20 20" focusable="false" aria-hidden="true">
-                      <path d="M12 16a.997.997 0 0 1-.707-.293l-5-5a.999.999 0 0 1 0-1.414l5-5a.999.999 0 1 1 1.414 1.414L8.414 10l4.293 4.293A.999.999 0 0 1 12 16" fill-rule="evenodd"></path>
-                    </svg></span></span></span></button><button type="button" class="Polaris-Button Polaris-Button--plain Polaris-Button--iconOnly" aria-label="Scroll table right one column"><span class="Polaris-Button__Content"><span class="Polaris-Button__Icon"><span class="Polaris-Icon"><svg class="Polaris-Icon__Svg" viewBox="0 0 20 20" focusable="false" aria-hidden="true">
-                      <path d="M8 16a.999.999 0 0 1-.707-1.707L11.586 10 7.293 5.707a.999.999 0 1 1 1.414-1.414l5 5a.999.999 0 0 1 0 1.414l-5 5A.997.997 0 0 1 8 16" fill-rule="evenodd"></path>
-                    </svg></span></span></span></button></div>
-          <div class="Polaris-DataTable">
-            <div class="">
-              <table class="Polaris-DataTable__Table">
-                <thead>
-                  <tr>
-                    <th data-polaris-header-cell="true" class="Polaris-DataTable__Cell Polaris-DataTable__Cell--header Polaris-DataTable__Cell--text" scope="col" style="height: 53px;"> Message	</th>
-                    <th data-polaris-header-cell="true" class="Polaris-DataTable__Cell Polaris-DataTable__Cell--header Polaris-DataTable__Cell--numeric" scope="col" style="height: 53px;">Font Color	</th>
-                    <th data-polaris-header-cell="true" class="Polaris-DataTable__Cell Polaris-DataTable__Cell--header Polaris-DataTable__Cell--numeric" scope="col" style="height: 53px;">Font Size	</th>
-                    <th data-polaris-header-cell="true" class="Polaris-DataTable__Cell Polaris-DataTable__Cell--header Polaris-DataTable__Cell--numeric" scope="col" style="height: 53px;">Background Color	</th>
-                    <th data-polaris-header-cell="true" class="Polaris-DataTable__Cell Polaris-DataTable__Cell--header Polaris-DataTable__Cell--numeric" scope="col" style="height: 53px;">Padding</th>
-                    <th data-polaris-header-cell="true" class="Polaris-DataTable__Cell Polaris-DataTable__Cell--header Polaris-DataTable__Cell--numeric" scope="col" style="height: 53px;">Active At</th>
-                    <th data-polaris-header-cell="true" class="Polaris-DataTable__Cell Polaris-DataTable__Cell--header Polaris-DataTable__Cell--numeric" scope="col" style="height: 53px;">Deactive At</th>
-                    <th data-polaris-header-cell="true" class="Polaris-DataTable__Cell Polaris-DataTable__Cell--header Polaris-DataTable__Cell--numeric" scope="col" style="height: 53px;">Is Default</th>
-                    <th data-polaris-header-cell="true" class="Polaris-DataTable__Cell Polaris-DataTable__Cell--header Polaris-DataTable__Cell--numeric" scope="col" style="height: 53px;">Action</th>
-                    <th data-polaris-header-cell="true" class="Polaris-DataTable__Cell Polaris-DataTable__Cell--header Polaris-DataTable__Cell--numeric" scope="col" style="height: 53px;"></th>
-
-                  </tr>
-                </thead>
-                 <tbody>
-                <% @bannerList.each do |banner| %>
-               
-                    <tr class="Polaris-DataTable__TableRow">
-                      <%= form_for banner,:url => :shop_modify, :method => :POST do |f| %>
-                    <td class="Polaris-DataTable__Cell Polaris-DataTable__Cell--text"  style="height: 112px;"><%= banner.text %></td>
-                    <td class="Polaris-DataTable__Cell Polaris-DataTable__Cell--numeric" style="height: 112px;"><div class="Polaris-TextField">
-                           <div class="color_box" style="background: <%= banner.font_color %>"></div>
-                           <%= f.hidden_field :font_color, :class=>'Polaris-TextField__Input', id:"f-#{banner.id}",  placeholder: "select color" %>
-                           <%= banner.font_color %>
-                           </td>
-                    <td class="Polaris-DataTable__Cell Polaris-DataTable__Cell--numeric" style="height: 112px;"><%= banner.font_size %></td>
-                    <td class="Polaris-DataTable__Cell Polaris-DataTable__Cell--numeric" style="height: 112px;">
-                    <div class="color_box" style="background:  <%= banner.background_color %>"></div>
-                    <%= f.hidden_field :background_color, id:"b-#{banner.id}", placeholder: "eg: Black or #dde244" %>
-                    <%= banner.background_color %>
-           
-                    
-                     </td>
-                    <td class="Polaris-DataTable__Cell Polaris-DataTable__Cell--numeric" style="height: 112px;"><%= banner.padding %></td>
-                    <td class="Polaris-DataTable__Cell Polaris-DataTable__Cell--numeric" style="height: 112px;"><%= banner.active_at .strftime("%F %T") %></td>
-                    <td class="Polaris-DataTable__Cell Polaris-DataTable__Cell--numeric" style="height: 112px;"><%= banner.deactive_at .strftime("%F %T")%></td>
-                    <td class="Polaris-DataTable__Cell Polaris-DataTable__Cell--numeric" style="height: 112px;"><%= banner.default ? 'Yes' : 'No' %></td>
-                    
-                    <td class="Polaris-DataTable__Cell Polaris-DataTable__Cell--numeric" style="height: 112px;"><%= link_to 'Edit', edit_banner_path(id:banner.id), class: 'Polaris-Button Polaris-Button--primary' %>  </td>
-                    
-                     <% end %>
-                  </tr>
-                  <% end %>
-                </tbody>
-              </table>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-
-<script>
-// $(document).ready(function(){
-
-// $('#datetimepicker1').datetimepicker({
-
-// });
-// $('#datetimepicker').datetimepicker({value:'2015/04/15 05:03', step:10});
-// $('.some_class').datetimepicker();
-// $('#default_datetimepicker').datetimepicker({
-// 	formatTime:'H:i',
-// 	formatDate:'d.m.Y',
-// 	//defaultDate:'8.12.1986', // it's my birthday
-// 	defaultDate:'+03.01.1970', // it's my birthday
-// 	defaultTime:'10:00',
-// 	timepickerScrollbar:false
-// });
-// $('#datetimepicker10').datetimepicker({
-// 	step:5,
-// 	inline:true
-// });
-
-// })
-
-
+	<div class="Polaris-Page"><%= link_to 'Add Banner', new_banner_path, class: 'Polaris-Button Polaris-Button--primary' %>
+		<div class="Polaris-Page-Header">
+			<div class="Polaris-Page-Header__TitleAndRollup">
+				<div class="Polaris-Page-Header__Title">
+					<div>
+						<h1 class="Polaris-DisplayText Polaris-DisplayText--sizeLarge">Previously used Banner</h1>
+					</div>
+					<div></div>
+				</div>
+			</div>
+		</div>
+		<div class="Polaris-Page__Content">
+			<div class="Polaris-Card">
+				<div class="">
+					<div class="Polaris-DataTable__Navigation">
+						<button type="button" class="Polaris-Button Polaris-Button--disabled Polaris-Button--plain Polaris-Button--iconOnly" disabled="" aria-label="Scroll table left one column">
+							<span class="Polaris-Button__Content">
+								<span class="Polaris-Button__Icon">
+									<span class="Polaris-Icon">
+										<svg class="Polaris-Icon__Svg" viewBox="0 0 20 20" focusable="false" aria-hidden="true">
+											<path d="M12 16a.997.997 0 0 1-.707-.293l-5-5a.999.999 0 0 1 0-1.414l5-5a.999.999 0 1 1 1.414 1.414L8.414 10l4.293 4.293A.999.999 0 0 1 12 16" fill-rule="evenodd"></path>
+										</svg>
+									</span>
+								</span>
+							</span>
+						</button>
+						<button type="button" class="Polaris-Button Polaris-Button--plain Polaris-Button--iconOnly" aria-label="Scroll table right one column">
+							<span class="Polaris-Button__Content">
+								<span class="Polaris-Button__Icon">
+									<span class="Polaris-Icon">
+										<svg class="Polaris-Icon__Svg" viewBox="0 0 20 20" focusable="false" aria-hidden="true">
+											<path d="M8 16a.999.999 0 0 1-.707-1.707L11.586 10 7.293 5.707a.999.999 0 1 1 1.414-1.414l5 5a.999.999 0 0 1 0 1.414l-5 5A.997.997 0 0 1 8 16" fill-rule="evenodd"></path>
+										</svg>
+									</span>
+								</span>
+							</span>
+						</button>
+					</div>
+					<div class="Polaris-DataTable">
+						<div class="">
+							<table class="Polaris-DataTable__Table">
+								<thead>
+									<tr>
+										<th data-polaris-header-cell="true" class="Polaris-DataTable__Cell Polaris-DataTable__Cell--header Polaris-DataTable__Cell--text" scope="col" style="height: 53px;"> Message	</th>
+										<th data-polaris-header-cell="true" class="Polaris-DataTable__Cell Polaris-DataTable__Cell--header Polaris-DataTable__Cell--numeric" scope="col" style="height: 53px;">Font Color	</th>
+										<th data-polaris-header-cell="true" class="Polaris-DataTable__Cell Polaris-DataTable__Cell--header Polaris-DataTable__Cell--numeric" scope="col" style="height: 53px;">Font Size	</th>
+										<th data-polaris-header-cell="true" class="Polaris-DataTable__Cell Polaris-DataTable__Cell--header Polaris-DataTable__Cell--numeric" scope="col" style="height: 53px;">Background Color	</th>
+										<th data-polaris-header-cell="true" class="Polaris-DataTable__Cell Polaris-DataTable__Cell--header Polaris-DataTable__Cell--numeric" scope="col" style="height: 53px;">Padding</th>
+										<th data-polaris-header-cell="true" class="Polaris-DataTable__Cell Polaris-DataTable__Cell--header Polaris-DataTable__Cell--numeric" scope="col" style="height: 53px;">Active At</th>
+										<th data-polaris-header-cell="true" class="Polaris-DataTable__Cell Polaris-DataTable__Cell--header Polaris-DataTable__Cell--numeric" scope="col" style="height: 53px;">Deactive At</th>
+										<th data-polaris-header-cell="true" class="Polaris-DataTable__Cell Polaris-DataTable__Cell--header Polaris-DataTable__Cell--numeric" scope="col" style="height: 53px;">Is Default</th>
+										<th data-polaris-header-cell="true" class="Polaris-DataTable__Cell Polaris-DataTable__Cell--header Polaris-DataTable__Cell--numeric" scope="col" style="height: 53px;">Action</th>
+										<th data-polaris-header-cell="true" class="Polaris-DataTable__Cell Polaris-DataTable__Cell--header Polaris-DataTable__Cell--numeric" scope="col" style="height: 53px;"></th>
+									</tr>
+								</thead>
+								<tbody><% @bannerList.each do |banner| %>
+									<tr class="Polaris-DataTable__TableRow"><%= form_for banner,:url => :shop_modify, :method => :POST do |f| %>
+										<td class="Polaris-DataTable__Cell Polaris-DataTable__Cell--text"  style="height: 112px;"><%= banner.text %>
+										</td>
+										<td class="Polaris-DataTable__Cell Polaris-DataTable__Cell--numeric" style="height: 112px;">
+											<div class="Polaris-TextField">
+												<div class="color_box" style="background: <%= banner.font_color %>">
+												</div><%= f.hidden_field :font_color, :class=>'Polaris-TextField__Input', id:"f-#{banner.id}",  placeholder: "select color" %><%= banner.font_color %>
+											</td>
+											<td class="Polaris-DataTable__Cell Polaris-DataTable__Cell--numeric" style="height: 112px;"><%= banner.font_size %>
+											</td>
+											<td class="Polaris-DataTable__Cell Polaris-DataTable__Cell--numeric" style="height: 112px;">
+												<div class="color_box" style="background:  <%= banner.background_color %>">
+												</div><%= f.hidden_field :background_color, id:"b-#{banner.id}", placeholder: "eg: Black or #dde244" %><%= banner.background_color %>
+											</td>
+											<td class="Polaris-DataTable__Cell Polaris-DataTable__Cell--numeric" style="height: 112px;"><%= banner.padding %>
+											</td>
+											<td class="Polaris-DataTable__Cell Polaris-DataTable__Cell--numeric" style="height: 112px;"><%= banner.active_at .strftime("%F %T") %>
+											</td>
+											<td class="Polaris-DataTable__Cell Polaris-DataTable__Cell--numeric" style="height: 112px;"><%= banner.deactive_at .strftime("%F %T")%>
+											</td>
+											<td class="Polaris-DataTable__Cell Polaris-DataTable__Cell--numeric" style="height: 112px;"><%= banner.default ? 'Yes' : 'No' %>
+											</td>
+											<td class="Polaris-DataTable__Cell Polaris-DataTable__Cell--numeric" style="height: 112px;"><%= link_to 'Edit', edit_banner_path(id:banner.id), class: 'Polaris-Button Polaris-Button--primary' %>
+											</td><% end %>
+										</tr><% end %>
+									</tbody>
+								</table>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	<script>
 let d_form=document.getElementById('form_add');
 d_form.style.display='none';
 function formAdd(){
